--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:databasePassword123@localhost:3306/issue-tracker"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="gk2vuQ4rVv6SpBiXEMRst7ipAqS6hiP87/h6sHJmLmE="
