Configure Google Provider

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:databasePassword123@localhost:3306/issue-tracker"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="gk2vuQ4rVv6SpBiXEMRst7ipAqS6hiP87/h6sHJmLmE="
+GOOGLE_CLIENT_ID="888143831078-l332cp65e28lg0m4kko62a4qhuinccg2.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
